<resources>
    <string name="app_name">ABES</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">Login</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password ?</string>
    <string name="log_in">log in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register_here">Register here</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abes_business_school">ABES BUSINESS SCHOOL</string>
    <string name="registration">REGISTRATION</string>
    <string name="events">EVENTS</string>
    <string name="admissions">ADMISSIONS</string>
    <string name="placement">PLACEMENT</string>
    <string name="about_us">ABOUT US</string>
    <string name="profile">PROFILE</string>
    <string name="logout">logout</string>
    <string name="communicate">COMMUNICATE</string>
    <string name="share">share</string>
    <string name="rate_us">Rate us</string>
    <string name="hello">Hello,</string>
    <string name="good_morning">Good Morning</string>
    <string name="search">search</string>
    <string name="explore_categories">Explore categories</string>
    <string name="see_all">See all</string>
    <string name="job_and_internships">job and internships</string>
    <string name="club_and_events">club and events</string>
    <string name="live_events">live events</string>
    <string name="coding_contest">coding contest</string>
    <string name="contest_list">contest list</string>
    <string name="admission">Admission</string>
    <string name="ongoing">ongoing</string>
    <string name="top_recruiters">Top Recruiters</string>
</resources>