<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/abes"
    tools:context=".login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white"
        android:background="@drawable/custom_edittext">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#552B28"
                android:textSize="34sp"
                android:textAlignment="center"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/group_l"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:textColorHint="#552B28"
                android:padding="10dp"
                android:textColor="#552B28"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#977070"
                android:layout_marginTop="40dp">

            </EditText>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/group_p"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:textColor="#552B28"
                    android:textColorHint="#552B28"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHighlight="#977070"
                    android:layout_marginTop="20dp"
                    >

                </EditText>




            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textColor="#552B28">

            </TextView>

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/log_in"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:backgroundTint="#552B28"
                android:layout_marginTop="20dp"
                app:cornerRadius="20dp">
                
            </Button>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#666464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/register2"
            tools:ignore="MissingConstraints">

        </TextView>

        <TextView
            android:id="@+id/register2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textColor="#552B28"
            android:layout_marginTop="3dp"
            app:layout_constraintLeft_toRightOf="@id/register1"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>